--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-zhang925的个人网站测试
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>zhang925的个人网站测试.html</title>
+    <meta name="keywords" content="keyword1,keyword2,keyword3">
+    <meta name="description" content="this is my page">
+    <meta name="content-type" content="text/html; charset=UTF-8">
+<script type="text/javascript" >
+  alert('zhang925的个人网站测试');    
+</script>
+  </head>
+  <body  >
+  <div >
+  zhang925的个人网站测试
+    </div>
+  </body>
+</html>
