--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="this is my page">
     <meta name="content-type" content="text/html; charset=UTF-8">
 <script type="text/javascript" >
-  alert('zhang925的个人网站测试');    
+    alert('zhang925的个人网站测试');    
 </script>
   </head>
   <body  >
   <div >
-  zhang925的个人网站测试
+  zhang925的个人网站测试,只支持静态的网站！！
     </div>
   </body>
 </html>
