--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body  >
   <div >
-  zhang925的个人网站测试,只支持静态的网站！！
+  zhang925的个人网站测试,只支持静态的网站！
     <a href='www.baidu.com'>百度</a>
     </div>
   </body>
