--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="keywords" content="keyword1,keyword2,keyword3">
     <meta name="description" content="this is my page">
     <meta name="content-type" content="text/html; charset=UTF-8">
-<script type="text/javascript" ></script>
+<script type="text/javascript" >
+    function test(){
+      alert("测试一下！！");
+    }
+ </script>
   </head>
   <body  >
   <div >
   zhang925的个人网站测试,只支持静态的网站！
-    <a href='www.baidu.com'>百度</a>
+   <input id="test" type="button" value="测试一下" onclick="test()" />
     </div>
   </body>
 </html>
