--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <meta name="keywords" content="keyword1,keyword2,keyword3">
     <meta name="description" content="this is my page">
     <meta name="content-type" content="text/html; charset=UTF-8">
-<script type="text/javascript" >
-    function test(){
-      alert("测试一下！！");
-    }
- </script>
+<script type="text/javascript" src="js/index.js"></script>
   </head>
   <body  >
   <div >
