--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
   
   </head>
   <body  >
-  <div >
-  zhang925的个人网站测试,只支持静态的网站！
-   <input id="test" type="button" value="测试一下" onclick="test()" />
-   <br/>
-   <input type="text" name="date" id="date" />
-    </div>
+  	<div >
+	  <pre>
+  				人生就像蒲公英
+		  		看似自由
+		  		实则身不由己
+		  		许多人
+		  		许多事
+		  		明明很在乎
+		  		可又能怎样呢
+		  		缘分来了
+		  		就来了
+		</pre>
+   		<input id="test" type="button" value="测试一下" onclick="test()" />
+   		<br/>
+	   	<input type="text" name="date" id="date" />
+    	</div>
   </body>
 </html>
