--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		});
 		
 	</script>
-	<%-- 头部js css 引入  开始 --%>
+	<!-- 头部js css 引入  开始 -->
 	
 	
   </head>
@@ -221,7 +221,7 @@
     <div id="foot">
     	<div id="foot_main">Author：ENDLESS FOREVER
    		<input id="test" type="button" value="测试一下" onclick="test()" />
-	   	<input type="text" name="date" id="date" />
+	   	<input hidden=""hidden" type="text" name="date" id="date" />
 	 </div>
     </div>
     <!-- 底部结束 -->
