--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@
       
       <!-- 底部开始 -->
     <div id="foot">
-    	<div id="foot_main">Author：ENDLESS FOREVER
-   		<input id="test" type="button" value="测试一下" onclick="test()" />
+    	<div id="foot_main">Author：ENDLESS FOREVER  <span id="test" type="button" value="提示" onclick="test()" ></span>
 	   	<input hidden=""hidden" type="text" name="date" id="date" />
 	 </div>
     </div>
