--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 				
 		  	</div>
 <pre>
+
+<!--
 看着你有些累
 想要一个人静一会
 你的眼含着泪
@@ -160,12 +162,12 @@
 就算候鸟已南飞
 还有我在这里
 痴痴地等你归
+-->
 
 
 
 
 
-<!--
 取暖回忆	回忆无香
 有阳光	还感觉冷
 我站在分隔岛上
@@ -191,7 +193,7 @@
 如果我	忍住这个秘密
 温暖冬天	就会遥遥而无期
 就该错过	埋葬冬天的秘密
---></pre>
+</pre>
 </div>
 		</div>
 	  	<!-- 中间部分中部结束 -->
