--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="main_wenzi">
 			
 			
-			<a style="color: red;">还有我--任贤齐</a>
+			<a style="color: red;">冬天的秘密</a>
 
 
 <!--	播放器		-->
