--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>跳转页面</title>
+   <title>加载中……</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 
   	<script src="jquery-ui-1.12.1/external/jquery/jquery.js"></script>
