--- a/phoneindex.html
+++ b/phoneindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-    <title>手机端首页</title>
+    <title>欢迎你的到来</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
     <style type="text/css">
