--- a/phoneindex.html
+++ b/phoneindex.html
@@ -21,7 +21,7 @@
 <div style="text-align: center;">
     <h3> 欢迎！欢迎！</h3>
     <h3 >热列欢迎！</h3>
-    <img src="image/phoneimg/xfsn.jpg" />
+    <img src="image/phoneimg/wxtx.jpg" />
 </div>
 </body>
 </html>
