测试修改i啊

--- a/pcindex.html
+++ b/pcindex.html
@@ -47,7 +47,7 @@
     	
     	
     		<div style="float: right;">
-    			<span onclick="zhuce();"  style="font-weight:bolder; color: blue; cursor: pointer;" >注册</span>
+    			<span onclick="zhuce();"  style="font-weight:bolder; color: blue; cursor: pointer;" >注册：</span>
 	    		&nbsp;&nbsp;&nbsp;
 	    	</div>
     		<div style="float: right;">
