--- a/phoneindex.html
+++ b/phoneindex.html
@@ -22,6 +22,7 @@
     <h3> 欢迎！欢迎！</h3>
     <h3 >热列欢迎！</h3>
     <img src="image/phoneimg/wxtx.jpg" />
+    <img src="image/phoneimg/Imissyou.png" />
 </div>
 </body>
 </html>
