--- a/phoneindex.html
+++ b/phoneindex.html
@@ -21,6 +21,8 @@
 <div style="text-align: center;">
     <h3> 欢迎！欢迎！</h3>
     <h3 >热列欢迎！</h3>
+    <h3>我能搜集到的就这么多了</h3>
+    <h3>不知道你能不能看到^_^</h3>
     <img src="image/phoneimg/himg001.jpg" />
     <img src="image/phoneimg/himg002.jpg" />
     <img src="image/phoneimg/himg003.jpg" />
