--- a/phoneindex.html
+++ b/phoneindex.html
@@ -46,7 +46,7 @@
     <h5>后来，后来由于种种原因都到现在了。</h5>
     <h5>16年那年，也不知道发什么晕去找你了，最后你给我说的可把我吓坏了、我以为你再也不理我了呢(┬＿┬)</h5>
     <h5>不过还好还好o(∩_∩)o</h5>
-    <h5>这是你送的我第一张照片，我一直带着呢，o(∩_∩)o</h5>
+    <h5>这是你送的我第一张照片，我一直带着呢o(∩_∩)o</h5>
     <img src="image/phoneimg/himg008.jpg" />
     <img src="image/phoneimg/Imissyou.png" />
 </div>
