--- a/phoneindex.html
+++ b/phoneindex.html
@@ -40,16 +40,18 @@
     <img src="image/phoneimg/himg005.jpg" />
     <img src="image/phoneimg/himg006.jpg" />
     <img src="image/phoneimg/himg007.jpg" />
-    <h5>08年上半年我就认识你了，那时候从人家那里听说，那个大眼睛，什么什么的.....我一听，嘿，跟我一个妹妹的名字一样。</h5>
-    <h5>后来我跑操的时候见到你，嗨、挺漂亮的一个女孩，可惜是个女汉子啊。</h5>
-    <h5>后来真正和你接触了才知道，你人挺好的啊。</h5>
-    <h5>后来关于你的信息也就只能在QQ上找到了</h5>
-    <h5>后来，后来由于种种原因到现在了。</h5>
+    <h5>08年上半年就认识你了，那时候从人家那里听说，那个大眼睛，什么什么的.....我一听，嘿，跟我一个妹妹的名字一样。</h5>
+    <h5>后来跑操的时候见到你，嗨、挺漂亮的一个女孩，不会是个女汉子吧。因为你总是跑在最前面！</h5>
+    <h5>后来真正和你接触了，你人挺好的啊。</h5>
+    <h5>后来关于你的信息也就只能在QQ上找到了。</h5>
+    <h5>后来，后来由于种种原因到现在了......</h5>
     <h5>16年那年，也不知道发什么晕去找你了，最后你给我说的可把我吓坏了、我以为你再也不理我了呢(┬＿┬)</h5>
     <h5>不过还好还好o(∩_∩)o</h5>
     <h5>这是你送我的第一张照片，我一直带着呢o(∩_∩)o</h5>
     <img src="image/phoneimg/himg008.jpg" />
+    <h5>o(∩_∩)o嗯，就先写这么多吧。o(∩_∩)o</h5>
     <img src="image/phoneimg/Imissyou.png" />
+    <h5>。o(∩_∩)o</h5>
 </div>
 </body>
 </html>
