--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <img src="image/phoneimg/himg005.jpg" />
     <img src="image/phoneimg/himg006.jpg" />
     <img src="image/phoneimg/himg007.jpg" />
+    <img src="image/phoneimg/himg008.jpg" />
     <h5>08年上半年就认识你了，那时候从人家那里听说，那个大眼睛，什么什么的.....我一听，嘿，跟我一个妹妹的名字一样。</h5>
     <h5>后来跑操的时候见到你，嗨、挺漂亮的一个女孩，不会是个女汉子吧。因为你总是跑在最前面！</h5>
     <h5>后来真正和你接触了，你人挺好的啊。</h5>
