--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="image/phoneimg/himg003.jpg" />
     <img src="image/phoneimg/himg004.jpg" />
     <img src="image/phoneimg/himg005.jpg" />
-    <img src="image/phoneimg/himg006.jpg" />
+    <!-- <img src="image/phoneimg/himg006.jpg" /> -->
     <img src="image/phoneimg/himg007.jpg" />
     <img src="image/phoneimg/himg008.jpg" />
     <h6>有张小猫的图片换手机，没保存到电脑上(┬＿┬)</h6>
